# LLM-QA-Microservice

./: .env.example  API_docs.md  README.md  app.py  docker-compose.yml  postgredb_runfirst.py  pyproject.toml  requirements.md  requirements.txt
app/: database.py  main.py  models.py  schemas.py
app/routes/: documents.py  questions.py
app/services/: document_service.py  embedding_service.py  question_service.py
chroma_db/: chroma.sqlite3
